--- a/hangzhou_buy_house/public/index.html
+++ b/hangzhou_buy_house/public/index.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>hangzhou_buy_house</title>
+      <!-- 引入样式 -->
+      <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
   </head>
   <body>
     <noscript>
       <strong>We're sorry but hangzhou_buy_house doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
+    <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.11&key=1116c26d32aa7f6d1a30744115e44e2f&plugin=AMap.Autocomplete,AMap.PlaceSearch"></script>
     <!-- built files will be auto injected -->
   </body>
 </html>
