--- a/hangzhou_buy_house/public/index.html
+++ b/hangzhou_buy_house/public/index.html
@@ -14,7 +14,12 @@
       <strong>We're sorry but hangzhou_buy_house doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
-    <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.11&key=1116c26d32aa7f6d1a30744115e44e2f&plugin=AMap.Autocomplete,AMap.PlaceSearch"></script>
+    <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.11&key=1116c26d32aa7f6d1a30744115e44e2f&plugin=AMap.Autocomplete,AMap.PlaceSearch,AMap.Driving"></script>
+    <script>
+        var test = () => {
+            console.log('oooooo')
+        }
+    </script>
     <!-- built files will be auto injected -->
   </body>
 </html>
